--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   --button-bg: #504945;
   --input-bg: #3c3836;
   --border: #665c54;
-  --link-hover: #fabd2f;
+  --link-hover: #b8a87f;
   --shadow: rgba(0, 0, 0, 0.3);
 }
 html,
@@ -31,7 +31,7 @@ h1 {
   margin-bottom: 15px;
 }
 h3 {
-  color: var(--accent);
+  color: var(--fg);
   text-align: center;
 }
 #search {
@@ -62,14 +62,16 @@ h3 {
   border-radius: 5px;
   cursor: pointer;
 }
+.link-item a:hover {
+  color: #524219;
+}
+.link-item:hover {
+  background: var(--link-hover);
+}
 .link-item a {
   color: var(--fg);
   text-decoration: none;
   font-weight: bold;
   display: block;
   width: 100%;
-}
-.link-item:hover {
-  background: var(--link-hover);
-  color: var(--bg);
 }
