--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   --link-hover: #b8a87f;
   --shadow: rgba(0, 0, 0, 0.3);
 }
+
 html,
 body {
   margin: 0;
@@ -19,21 +20,25 @@ body {
   font-family: Arial, sans-serif;
   margin-right: 12px;
 }
+
 .container {
   max-width: 1200px;
   margin: 20px auto;
   padding: 10px;
 }
+
 h1 {
   text-align: center;
   color: var(--accent);
   font-size: 2rem;
   margin-bottom: 15px;
 }
+
 h3 {
   color: var(--fg);
   text-align: center;
 }
+
 #search {
   background: var(--bg);
   color: var(--fg);
@@ -44,6 +49,7 @@ h3 {
   box-shadow: 0px 2px 4px var(--shadow);
   margin-bottom: 20px;
 }
+
 .section {
   background: var(--section-bg);
   border-radius: 8px;
@@ -51,9 +57,19 @@ h3 {
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.base-repo {
+  color: var(--fg);
+  text-decoration: none;  
+}
+.base-repo:hover {
+  color: var(--accent);
+} 
+
 .links {
   margin-top: 10px;
 }
+
 .link-item {
   margin: 8px 0;
   text-align: center;
@@ -62,12 +78,20 @@ h3 {
   border-radius: 5px;
   cursor: pointer;
 }
+
+.link-item > p {
+  margin: 0;  
+}
+
 .link-item a:hover {
   color: #524219;
 }
+
 .link-item:hover {
+  color: #524219;
   background: var(--link-hover);
 }
+
 .link-item a {
   color: var(--fg);
   text-decoration: none;
