--- a/fun/styles.css
+++ b/fun/styles.css
@@ -55,12 +55,9 @@ header > p {
   list-style: none;
 }
 
-.sidebar a:hover {
+.sidebar a:hover  {
   color: var(--accent);
 }
-
-
-/*styling for main content*/
 
 body {
   font-family: Arial, sans-serif;
@@ -92,6 +89,10 @@ main {
   grid-column: 2;
   margin: 20px;
   height: auto;
+}
+
+.topic a {
+  color: var(--accent)
 }
 
 strong {
